--- a/style.css
+++ b/style.css
@@ -65,14 +65,41 @@ body {
     0% {
         color: red;
         top: 60%;
+        scale: 1.1;
+    }
+    10%{
+        scale: 1;
+    }
+    20%{
+        scale: 1.1;
+    }
+    30%{
+        scale: 1;
+    }
+    40%{
+        scale: 1.1;
     }
     50% {
         color: green;
         top: 40%;
+        scale: 1;
+    }
+    60%{
+        scale: 1.1;
+    }
+    70%{
+        scale: 1;
+    }
+    80%{
+        scale: 1.1;
+    }
+    90%{
+        scale: 1;
     }
     100% {
         color: yellow;
         top: 10%;
+        scale: 1.1;
     }
 }
 .button {
